--- a/login.html
+++ b/login.html
@@ -74,7 +74,7 @@
 <body>
 
     <div class="header">
-        <h1>📘 Online Book Store</h1>
+        <h1>Online Book Store</h1>
     </div>
 
     <div class="container">
@@ -95,3 +95,4 @@
 
 </body>
 </html>
+
