--- a/payment.html
+++ b/payment.html
@@ -137,10 +137,11 @@
         function confirmPayment() {
             alert(" Payment Successful! Thank you for your purchase.");
             localStorage.removeItem("cart"); // Clear cart after payment
-            window.location.href = "home.html"; // Redirect to homepage
+            window.location.href = "index.html"; // Redirect to homepage
             return false; // Prevent form submission
         }
     </script>
 
 </body>
 </html>
+
